# Digital-Template-to-XBRL-Converter

./: .gitattributes  .gitignore  .hintrc  LICENSE  README.md  package-lock.json  pyproject.toml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  issue-report.md
.github/workflows/: test-and-lint.yaml
digital-templates/: VSME-Digital-Template-1.0.1.xlsx  VSME-Digital-Template-Sample-1.0.1.xlsx
scripts/: check-report.py  dump-taxonomy.py  parse-and-dump.py  parse-and-ixbrl.py  update-taxonomy.py
src/mireport/: __init__.py  cli.py  conversionresults.py  excelprocessor.py  excelutil.py  exceptions.py  filesupport.py  json.py  taxonomy.py  utr.py  webapp.py  xbrlreport.py  xml.py
src/mireport/arelle/: report_info.py  support.py  taxonomy_info.py
src/mireport/data/: utr.json
src/mireport/data/excel_templates/: vsme.json
src/mireport/data/taxonomies/: vsme.json
src/mireport/inline_report_templates/: _macros.html.jinja  inline-report-flat-list.html.jinja  inline-report-presentation.html.jinja  style.css.jinja
src/mireport/static/: all.js  style.css
src/mireport/templates/: _macros.html.jinja  _svg.html.jinja  base.html.jinja  conversion-results.html.jinja  conversions.html.jinja  excel-to-xbrl-converter.html.jinja  source.css
tests/: integration.py  test_conversionresults.py  test_filesupport.py  test_xml.py
tests/data/: VSME-Digital-Template-Sample-1.0.0.xlsx  vsme-unit-test-v1.0.0.xlsx
tests/integrationTests/: test_expectedFactCounts.py
tests/scripts/: ixbrl_debug.py
tests/unitTests/: test_conversion_results_vs_builder.py  test_excelutil.py  test_xml.py
